--- a/src/test/resources/unit_test.properties
+++ b/src/test/resources/unit_test.properties
@@ -3,3 +3,5 @@ url=jdbc:pega:http://localhost:8080/prweb/PRRestService/JDBCAPI/v1/PegaJDBC/
 user=test
 password=rules
 dbName=PegaRULES
+# used for db specific unit tests
+dbType=postgres
